# clicklac

./: .gitignore  LICENSE  README.md  api-doc.md  clicklac.cabal  client_session_key.aes
migrations/: 1_init.cql  1_init.sql
resources/: app.cfg
src/: Main.hs
src/Clicklac/: API.hs  Application.hs  Cookie.hs  Email.hs  Environment.hs  OpFailure.hs  Password.hs  Session.hs  Types.hs  Url.hs  User.hs  Validation.hs
src/Clicklac/API/: Authentication.hs  Click.hs  User.hs
src/Clicklac/Middleware/: AuthCheck.hs
src/Clicklac/Servant/: Combinator.hs  Response.hs
src/Clicklac/Types/: Bio.hs  Email.hs  Location.hs  Name.hs  Password.hs  Url.hs  UserId.hs  Username.hs  ValidationState.hs
src/Control/Monad/: Cond.hs
src/Data/: Composition.hs
src/Data/Aeson/TH/: Extra.hs
src/Data/String/: Extra.hs
src/Database/CQL/Protocol/: Extra.hs
src/Database/PostgreSQL/Simple/: Lifted.hs  Pool.hs
src/Database/PostgreSQL/Simple/Lifted/: Copy.hs  Notification.hs  PostgresClient.hs  Transaction.hs
